# Agentic-AI

./: RecipeChefAgent_LangFlow.json
AgenticLangGraph/: .env  chatbot.ipynb  pyproject.toml  requirements.txt
Debugging/: .env  agent.py  debugging.ipynb  langgraph.json
Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Financial_AI_Analyst/: .env  FinAgent_st.py  financial_agent.py  requirements.txt
LangGraph/: .env  Human_in_the_loop.py  LangGraph_Intro.ipynb  chatbot_multi_tools.ipynb  conditional_edges.ipynb  langsmith_tracing.ipynb  memory_langgraph.ipynb  mydb.db  pydantic.ipynb  requirements.txt  simple_chatbot.ipynb  simple_graph.ipynb  sql_agent_with_Langgraph.ipynb  test.ipynb  tool_call.ipynb  tool_call_agent.ipynb
MCP_demo/: client.py  pyproject.toml  requirements.txt  weather.py
PdfAssistant/: .env  pdf_assistant.py  pdf_st.py  requirements.txt
VideoSummarizer/: .env  app.py  requirements.txt
